--- a/src/components/Cases/Cards/Cards.module.css
+++ b/src/components/Cases/Cards/Cards.module.css
@@ -16,3 +16,12 @@
   .deaths{
     border-bottom: 10px solid rgba(255, 0, 0, 0.5);
   }
+
+  .card {
+    margin: 0 2% !important;
+  }
+  @media only screen and (max-width: 770px) {
+    .card {
+      margin: 2% 0 !important;
+    }
+  }
