--- a/src/components/Cases/Cases.module.css
+++ b/src/components/Cases/Cases.module.css
@@ -6,6 +6,9 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
+    padding-top: 100px;
+    padding-bottom: 100px;
+
   }
   
   .image {
