--- a/src/components/Cases/Cases.module.css
+++ b/src/components/Cases/Cases.module.css
@@ -5,6 +5,7 @@ body {
   .container {
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
     padding-top: 100px;
     padding-bottom: 100px;
